# georaster-kit

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
elevation-adapters/: Cargo.toml
elevation-adapters/src/: artifact_storage_fs.rs  lib.rs  metadata_storage_fs.rs  raster_reader_gdal.rs
elevation-adapters/src/artifact_resolvers/: artifact_resolver_fs.rs  artifact_resolver_gdal_s3.rs  fs.rs  mod.rs
elevation-adapters/src/artifact_storages/: fs.rs  mod.rs  s3.rs
elevation-adapters/src/metadata_storages/: fs.rs  mod.rs
elevation-adapters/src/raster_readers/: gdal.rs  mod.rs
elevation-api/: .env.example  Cargo.toml
elevation-api/src/: config.rs  error.rs  lib.rs  main.rs  telemetry.rs
elevation-api/src/application/: elevation_provider.rs  elevation_service.rs  ingest_provider.rs  mod.rs  preparation_service.rs
elevation-api/src/domain/: coordinate.rs  mod.rs
elevation-api/src/routes/: elevations.rs  mod.rs
elevation-api/tests/: api.rs
elevation-api/tests/fixtures/: dem.tif
elevation-api/tests/utils/: app.rs
elevation-cli/: Cargo.toml
elevation-core/: Cargo.toml
elevation-core/benches/: service_datasets_merge.rs
elevation-core/src/: elevation_service.rs  lib.rs  raster_reader.rs
elevation-domain/: Cargo.toml
elevation-domain/src/: lib.rs  metadata.rs  raster.rs  spatial.rs  storage.rs
elevation-grpc/: Cargo.toml  build.rs
elevation-grpc/proto/: api.proto
elevation-http/: .env.example  Cargo.toml
elevation-http/src/: lib.rs  main.rs
elevation-http/src/application/: elevation_provider.rs  mod.rs  tile_service.rs
elevation-http/src/domain/: tile.rs
elevation-http/src/routes/: tiles.rs
elevation-ingest/: Cargo.toml
elevation-ingest/src/: artifact_storage_fs.rs  gdal_process.rs  gdal_processor.rs  ingest.rs  lib.rs  metadata_storage_fs.rs
elevation-ingest/tests/: ingest.rs
elevation-main/: Cargo.toml
elevation-main/src/: main.rs
elevation-prepare-cli/: Cargo.toml  Dockerfile  README.md
elevation-prepare-cli/src/: main.rs
elevation-profile-grpc/: .env.example  Cargo.toml  Dockerfile  README.md
elevation-profile-grpc/src/: config.rs  lib.rs  main.rs  telemetry.rs
elevation-profile-grpc/src/application/: elevation_provider.rs  mod.rs  profile_service.rs
elevation-profile-grpc/src/grpc/: mod.rs  server.rs  status.rs
elevation-profile-grpc/tests/fixtures/: points.json
elevation-tiles-http/: .env.example  Cargo.toml  Dockerfile  README.md
elevation-tiles-http/src/: config.rs  error.rs  lib.rs  main.rs
elevation-tiles-http/src/application/: elevation_provider.rs  mod.rs  tile_aggregator.rs  tile_service.rs
elevation-tiles-http/src/application/elevation_calculation/: mean.rs  mod.rs
elevation-tiles-http/src/domain/: elevation.rs  elevation_tile.rs  mod.rs  tile.rs
elevation-tiles-http/src/routes/: mod.rs  tiles.rs
elevation-types/: Cargo.toml
elevation-types/src/: lib.rs
georaster-adapters/src/artifact_storages/: fs.rs
georaster-adapters/src/metadata_storages/: fs.rs
georaster-adapters/src/raster_readers/: gdal.rs
georaster-core/benches/: service_datasets_merge.rs
georaster-core/src/: georaster_service.rs
georaster-core/src/ingest/: ingest_service.rs
georaster-core/tests/: ingest.rs
georaster-domain/src/: lib.rs  metadata.rs  raster.rs
