[workspace]
resolver = "2"
members = [
  "georaster-core",
  "georaster-domain",
  "georaster-adapters",
  "elevation-prepare-cli",
  "elevation-profile-grpc",
  "elevation-tiles-http",
  "elevation-api",
]

[workspace.dependencies]
tokio = { version = "1.51.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
thiserror = "2.0.18"
geo = "0.32.0"
