[package]
name = "elevation-adapters"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
elevation-types = { path = "../elevation-types" }
serde_json = "1.0.149"
gdal = "0.19.0"
tracing = "0.1.44"
tokio = { version = "1.51.0", features = ["fs", "io-util"] }
