[package]
name = "elevation-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
elevation-ingest = { path = "../elevation-ingest" }
elevation-adapters = { path = "../elevation-adapters" }
elevation-types = { path = "../elevation-types" }
elevation-core = { path = "../elevation-core" }
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
