[package]
name = "elevation-main"
version = "0.1.0"
edition = "2024"

[dependencies]
elevation-ingest = { path = "../elevation-ingest" }
elevation-types = { path = "../elevation-types" }
elevation-core = { path = "../elevation-core" }
clap = { version = "4.6.0", features = ["derive"] }
thiserror = "2.0.18"
