[package]
name = "elevation-profile-grpc"
version = "0.1.0"
edition = "2024"

[dependencies]
elevation-adapters = { path = "../elevation-adapters" }
elevation-types = { path = "../elevation-types" }
elevation-core = { path = "../elevation-core" }
tokio = { version = "1.50.0", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tonic = { version = "0.14.5", features = ["transport"] }
prost = "0.14.3"
tonic-prost = "0.14.5"
tokio-stream = "0.1.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
geo = "0.32.0"
thiserror = "2.0.18"
tonic-health = "0.14.5"
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
tonic-prost-build = "0.14.5"
